# clauditor

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.capabilities.config.ts  playwright.config.js  playwright.config.ts  playwright.prod.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/linux/debian/: postrm
src-tauri/installer/windows/nsis/: uninstall-hooks.nsh
src-tauri/installer/windows/wix/: cleanup-fragment.wxs
src-tauri/src/: activity_service.rs  app_state.rs  capabilities.rs  cleanup.rs  commands.rs  file_watcher.rs  hook_server.rs  lib.rs  main.rs  preferences_store.rs  pty_manager.rs  session_store.rs  settings_installer.rs  state_engine.rs  test_hooks.rs  tray.rs  types.rs
src-tauri/test-fixtures/fake-claude/: Cargo.toml  README.md
src-tauri/test-fixtures/fake-claude/src/: main.rs
src-tauri/tests/fixtures/capabilities/mcp_bad_json/: settings.json
src-tauri/tests/fixtures/capabilities/mcp_well_formed/: settings.json
src-tauri/tests/fixtures/capabilities/slash_plugin/plugins/cache/mp/p/1/commands/: deploy.md
src-tauri/tests/fixtures/capabilities/slash_user/commands/: lint.md
src-tauri/tests/fixtures/capabilities/subagent_plugin/plugins/cache/mp/p/1/agents/: code-reviewer.md
src-tauri/tests/fixtures/capabilities/subagent_user/agents/: explorer.md
(+157 files in other folders)
