[package]
name = "clauditor"
version = "0.2.1"
edition = "2021"
description = "Desktop manager for multiple Claude Code sessions"
authors = ["huylq98"]

[lib]
name = "clauditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = "6"
notify-debouncer-full = "0.3"

axum = "0.7"
tower = { version = "0.5", features = ["util"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
parking_lot = "0.12"
rand = "0.8"
dirs = "5"
bytes = "1"
futures = "0.3"
hex = "0.4"
subtle = "2"

[features]
# Custom protocol required on mobile
custom-protocol = ["tauri/custom-protocol"]
